--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -102,6 +102,7 @@
                     </form>
                 </div>
                 <div class="fw-bolder mt-2">{{user?.token}}</div>
+                <button class="inicio__card-submit btn btn-secondary" type="submit" [routerLink]="['/admin-users']">ADMIN</button>
             </div>
         </div>
     </section>
